// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExecutionStatusLabel /> tests Aborted 1`] = `
<div>
  <div
    class="status aborted"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="circle-stop"
    >
      <svg
        fill="none"
        height="9"
        viewBox="0 0 10 10"
        width="9"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.2376 3.64697H3.76173C3.70245 3.64697 3.65379 3.69346 3.65379 3.75367V6.25637C3.65379 6.31534 3.70214 6.3637 3.76173 6.3637H6.2376C6.29688 6.3637 6.34493 6.31565 6.34493 6.25637V3.75367C6.34461 3.69377 6.29688 3.64697 6.2376 3.64697Z"
          fill="currentColor"
        />
        <path
          d="M5 0.3125C2.4115 0.3125 0.3125 2.41088 0.3125 5C0.3125 7.58912 2.4115 9.6875 5 9.6875C7.58881 9.6875 9.68688 7.58912 9.68688 5C9.68688 2.41088 7.58881 0.3125 5 0.3125ZM5 8.90443C2.84359 8.90443 1.09526 7.15609 1.09526 5C1.09526 2.84297 2.84359 1.09495 5 1.09495C7.15672 1.09495 8.90412 2.84297 8.90412 5C8.90412 7.15609 7.15672 8.90443 5 8.90443Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Aborted
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests ApprovalRejected 1`] = `
<div>
  <div
    class="status approvalrejected"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="x"
    >
      <svg
        fill="none"
        height="8"
        viewBox="0 0 10 10"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M0.107143 0.767857L0.767857 0.107143C0.910714 -0.0357143 1.14286 -0.0357143 1.26786 0.107143L5 3.82143L8.71429 0.107143C8.85714 -0.0357143 9.08929 -0.0357143 9.23214 0.107143L9.89286 0.767857C10.0357 0.910714 10.0357 1.14286 9.89286 1.26786L6.16071 5L9.89286 8.71429C10.0357 8.85714 10.0357 9.08929 9.89286 9.23214L9.23214 9.89286C9.08929 10.0357 8.85714 10.0357 8.71429 9.89286L5 6.16071L1.26786 9.89286C1.14286 10.0357 0.910714 10.0357 0.767857 9.89286L0.107143 9.23214C-0.0357143 9.08929 -0.0357143 8.85714 0.107143 8.71429L3.82143 5L0.107143 1.26786C-0.0357143 1.14286 -0.0357143 0.910714 0.107143 0.767857Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.ApprovalRejected
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests ApprovalWaiting 1`] = `
<div>
  <div
    class="status approvalwaiting"
  >
    <span
      class="bp3-icon bp3-icon-time StyledProps--main icon"
      icon="time"
    >
      <svg
        data-icon="time"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          time
        </desc>
        <path
          d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Waiting
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests AsyncWaiting 1`] = `
<div>
  <div
    class="status asyncwaiting"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="loading"
    >
      <svg
        height="10"
        viewBox="0 0 10 8"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="0"
          cy="0"
          fill="currentColor"
          r="1"
          transform="translate(2, 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          cx="0"
          cy="0"
          fill="currentColor"
          r="1"
          transform="translate(5, 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.2s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          cx="0"
          cy="0"
          fill="currentColor"
          r="1"
          transform="translate(8, 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.4s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Running
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Discontinuing 1`] = `
<div>
  <div
    class="status discontinuing"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="circle-stop"
    >
      <svg
        fill="none"
        height="9"
        viewBox="0 0 10 10"
        width="9"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6.2376 3.64697H3.76173C3.70245 3.64697 3.65379 3.69346 3.65379 3.75367V6.25637C3.65379 6.31534 3.70214 6.3637 3.76173 6.3637H6.2376C6.29688 6.3637 6.34493 6.31565 6.34493 6.25637V3.75367C6.34461 3.69377 6.29688 3.64697 6.2376 3.64697Z"
          fill="currentColor"
        />
        <path
          d="M5 0.3125C2.4115 0.3125 0.3125 2.41088 0.3125 5C0.3125 7.58912 2.4115 9.6875 5 9.6875C7.58881 9.6875 9.68688 7.58912 9.68688 5C9.68688 2.41088 7.58881 0.3125 5 0.3125ZM5 8.90443C2.84359 8.90443 1.09526 7.15609 1.09526 5C1.09526 2.84297 2.84359 1.09495 5 1.09495C7.15672 1.09495 8.90412 2.84297 8.90412 5C8.90412 7.15609 7.15672 8.90443 5 8.90443Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Aborted
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Errored 1`] = `
<div>
  <div
    class="status errored"
  >
    <span
      class="bp3-icon bp3-icon-warning-sign StyledProps--main icon"
      icon="warning-sign"
    >
      <svg
        data-icon="warning-sign"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          warning-sign
        </desc>
        <path
          d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Failed
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Expired 1`] = `
<div>
  <div
    class="status expired"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="expired"
    >
      <svg
        fill="none"
        height="9"
        viewBox="0 0 10 10"
        width="9"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 4V8H9V4H10ZM9 9V10H10V9H9ZM8 7.645C7.265 8.475 6.195 9 5 9C2.795 9 1 7.205 1 5C1 2.795 2.795 1 5 1V5.5L8.775 1.725C7.86 0.67 6.51 0 5 0C2.24 0 0 2.24 0 5C0 7.76 2.24 10 5 10C6.125 10 7.165 9.63 8 9V7.645Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Expired
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Failed 1`] = `
<div>
  <div
    class="status failed"
  >
    <span
      class="bp3-icon bp3-icon-warning-sign StyledProps--main icon"
      icon="warning-sign"
    >
      <svg
        data-icon="warning-sign"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          warning-sign
        </desc>
        <path
          d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Failed
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests IgnoreFailed 1`] = `
<div>
  <div
    class="status ignorefailed"
  >
    <span
      class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
      icon="tick-circle"
    >
      <svg
        data-icon="tick-circle"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          tick-circle
        </desc>
        <path
          d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Success
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests InterventionWaiting 1`] = `
<div>
  <div
    class="status interventionwaiting"
  >
    <span
      class="bp3-icon bp3-icon-time StyledProps--main icon"
      icon="time"
    >
      <svg
        data-icon="time"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          time
        </desc>
        <path
          d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Waiting
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests NotStarted 1`] = `
<div>
  <div
    class="status notstarted"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="play-outline"
    >
      <svg
        fill="none"
        height="8"
        viewBox="0 0 9 10"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0.617999 10C0.726149 10 0.834299 9.9691 0.926999 9.92275L8.52839 5.53496C8.71379 5.42681 8.83739 5.22596 8.83739 4.99421C8.83739 4.76246 8.71379 4.56161 8.52839 4.45346L0.926999 0.0811124C0.741599 -0.0270375 0.494399 -0.0270375 0.309 0.0811124C0.1236 0.189262 0 0.390112 0 0.621862V9.39745C0 9.61375 0.1236 9.83005 0.309 9.9382C0.4017 9.98455 0.509849 10 0.617999 10ZM1.236 1.67246L6.98339 4.99421L1.236 8.31595V1.67246Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.NotStarted
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Paused 1`] = `
<div>
  <div
    class="status paused"
  >
    <span
      class="bp3-icon bp3-icon-pause StyledProps--main icon"
      icon="pause"
    >
      <svg
        data-icon="pause"
        height="12"
        viewBox="0 0 16 16"
        width="12"
      >
        <desc>
          pause
        </desc>
        <path
          d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Paused
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Pausing 1`] = `
<div>
  <div
    class="status pausing"
  >
    <span
      class="bp3-icon bp3-icon-pause StyledProps--main icon"
      icon="pause"
    >
      <svg
        data-icon="pause"
        height="12"
        viewBox="0 0 16 16"
        width="12"
      >
        <desc>
          pause
        </desc>
        <path
          d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Pausing
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Queued 1`] = `
<div>
  <div
    class="status queued"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="queued"
    >
      <svg
        height="10"
        viewBox="0 0 14 11"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.3636 0H0.636364C0.467589 0 0.305728 0.0670454 0.186387 0.186387C0.0670452 0.305728 0 0.467589 0 0.636364V4.45455C0 4.62332 0.0670452 4.78518 0.186387 4.90452C0.305728 5.02386 0.467589 5.09091 0.636364 5.09091H13.3636C13.5324 5.09091 13.6943 5.02386 13.8136 4.90452C13.933 4.78518 14 4.62332 14 4.45455V0.636364C14 0.467589 13.933 0.305728 13.8136 0.186387C13.6943 0.0670454 13.5324 0 13.3636 0ZM12.7273 3.81818H1.27273V1.27273H12.7273V3.81818Z"
        />
        <path
          d="M13.3636 6.36328H0.636364C0.467589 6.36328 0.305728 6.43033 0.186387 6.54967C0.0670452 6.66901 0 6.83087 0 6.99964C0 7.16842 0.0670452 7.33028 0.186387 7.44962C0.305728 7.56896 0.467589 7.63601 0.636364 7.63601H13.3636C13.5324 7.63601 13.6943 7.56896 13.8136 7.44962C13.933 7.33028 14 7.16842 14 6.99964C14 6.83087 13.933 6.66901 13.8136 6.54967C13.6943 6.43033 13.5324 6.36328 13.3636 6.36328Z"
        />
        <path
          d="M13.3636 8.91016H0.636364C0.467589 8.91016 0.305728 8.9772 0.186387 9.09654C0.0670452 9.21588 0 9.37775 0 9.54652C0 9.71529 0.0670452 9.87716 0.186387 9.9965C0.305728 10.1158 0.467589 10.1829 0.636364 10.1829H13.3636C13.5324 10.1829 13.6943 10.1158 13.8136 9.9965C13.933 9.87716 14 9.71529 14 9.54652C14 9.37775 13.933 9.21588 13.8136 9.09654C13.6943 8.9772 13.5324 8.91016 13.3636 8.91016Z"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Queued
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests ResourceWaiting 1`] = `
<div>
  <div
    class="status resourcewaiting"
  >
    <span
      class="bp3-icon bp3-icon-time StyledProps--main icon"
      icon="time"
    >
      <svg
        data-icon="time"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          time
        </desc>
        <path
          d="M8 0C3.58 0 0 3.58 0 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6zm1-6.41V4c0-.55-.45-1-1-1s-1 .45-1 1v4c0 .28.11.53.29.71l2 2a1.003 1.003 0 001.42-1.42L9 7.59z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Waiting
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Running 1`] = `
<div>
  <div
    class="status running"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="loading"
    >
      <svg
        height="10"
        viewBox="0 0 10 8"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="0"
          cy="0"
          fill="currentColor"
          r="1"
          transform="translate(2, 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          cx="0"
          cy="0"
          fill="currentColor"
          r="1"
          transform="translate(5, 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.2s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          cx="0"
          cy="0"
          fill="currentColor"
          r="1"
          transform="translate(8, 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.4s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Running
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Skipped 1`] = `
<div>
  <div
    class="status skipped"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="skipped"
    >
      <svg
        height="8"
        viewBox="0 0 16 13"
        width="8"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.24972 8.54297H0.745838C0.337403 8.54297 0 8.88037 0 9.28881V11.8104C0 12.2189 0.337403 12.5563 0.745838 12.5563H3.26748C3.67592 12.5563 4.01332 12.2189 4.01332 11.8104V9.28881C3.99556 8.88037 3.65816 8.54297 3.24972 8.54297Z"
        />
        <path
          d="M15.2364 8.54297H12.7325C12.3241 8.54297 11.9867 8.88037 11.9867 9.28881V11.8104C11.9867 12.2189 12.3241 12.5563 12.7325 12.5563H15.2542C15.6626 12.5563 16 12.2189 16 11.8104V9.28881C15.9823 8.88037 15.6449 8.54297 15.2364 8.54297Z"
        />
        <path
          d="M9.25192 8.54297H6.73027C6.32184 8.54297 5.98444 8.88037 5.98444 9.28881V11.8104C5.98444 12.2189 6.32184 12.5563 6.73027 12.5563H9.25192C9.66035 12.5563 9.99775 12.2189 9.99775 11.8104V9.28881C9.98 8.88037 9.66035 8.54297 9.25192 8.54297ZM9.25192 11.7927H6.73027V9.27105H9.25192V11.7927Z"
        />
        <path
          d="M14.6504 6.71254L15.5383 2.37958L13.9401 2.91232C13.3363 2.09545 12.555 1.42064 11.6493 0.923418C10.5483 0.319645 9.28748 0 7.99114 0C4.01334 0 0.781372 3.01887 0.781372 6.71254C0.781372 7.01443 1.02998 7.26304 1.33187 7.26304C1.63376 7.26304 1.88237 7.01443 1.88237 6.71254C1.88237 3.62264 4.61711 1.101 7.99114 1.101C9.89125 1.101 11.6671 1.91787 12.8213 3.26748L11.3297 3.78246L14.6504 6.71254Z"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Skipped
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Success 1`] = `
<div>
  <div
    class="status success"
  >
    <span
      class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
      icon="tick-circle"
    >
      <svg
        data-icon="tick-circle"
        height="9"
        viewBox="0 0 16 16"
        width="9"
      >
        <desc>
          tick-circle
        </desc>
        <path
          d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Success
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests Suspended 1`] = `
<div>
  <div
    class="status suspended"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="banned"
    >
      <svg
        fill="none"
        height="9"
        viewBox="0 0 10 10"
        width="9"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.55 1.45C7.6 0.5 6.35 0 5 0C3.65 0 2.4 0.5 1.45 1.45C-0.500001 3.4 -0.500001 6.6 1.45 8.55C2.4 9.5 3.65 10 5 10C6.35 10 7.6 9.5 8.55 8.55C10.5 6.6 10.5 3.4 8.55 1.45ZM2.15 2.15C2.95 1.4 3.95 1 5 1C5.9 1 6.75 1.3 7.45 1.85L1.85 7.45C0.6 5.9 0.75 3.6 2.15 2.15ZM7.85 7.85C7.05 8.6 6.05 9 5 9C4.1 9 3.25 8.7 2.55 8.15L8.15 2.55C8.7 3.25 9.00001 4.1 9.00001 5C9.00001 6.05 8.60001 7.05 7.85 7.85Z"
          fill="currentColor"
        />
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Suspended
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests TaskWaiting 1`] = `
<div>
  <div
    class="status taskwaiting"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="loading"
    >
      <svg
        height="10"
        viewBox="0 0 10 8"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="0"
          cy="0"
          fill="currentColor"
          r="1"
          transform="translate(2, 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          cx="0"
          cy="0"
          fill="currentColor"
          r="1"
          transform="translate(5, 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.2s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          cx="0"
          cy="0"
          fill="currentColor"
          r="1"
          transform="translate(8, 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.4s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Running
    </span>
  </div>
</div>
`;

exports[`<ExecutionStatusLabel /> tests TimedWaiting 1`] = `
<div>
  <div
    class="status timedwaiting"
  >
    <span
      class="bp3-icon StyledProps--main icon"
      data-icon="loading"
    >
      <svg
        height="10"
        viewBox="0 0 10 8"
        width="10"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="0"
          cy="0"
          fill="currentColor"
          r="1"
          transform="translate(2, 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          cx="0"
          cy="0"
          fill="currentColor"
          r="1"
          transform="translate(5, 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.2s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
        <circle
          cx="0"
          cy="0"
          fill="currentColor"
          r="1"
          transform="translate(8, 4)"
        >
          <animatetransform
            additive="sum"
            attributeName="transform"
            begin="0.4s"
            dur="1s"
            repeatCount="indefinite"
            type="scale"
            values="0; 1.25; 0"
          />
        </circle>
      </svg>
    </span>
    <span>
      pipeline.executionStatus.Running
    </span>
  </div>
</div>
`;
